# lucidchart2sqlalchemy

./: .flake8  CamperVanPricing_en_v2.csv  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
lucidchart_2_sqlalchemy/: config.json  main.py  parser.py  utils.py
src/: main.py  utils.py
